<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_captionOrComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_userProfileWithoutDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImg"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/other_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/otherUserProfileName"
                android:textColor="@color/ebony_clay"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/noto_sans"
                app:layout_constraintStart_toEndOf="@id/profileImg"
                app:layout_constraintTop_toTopOf="@id/profileImg" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/otherUserProfileBadge"
                android:textColor="@color/bali_hai"
                android:textSize="10sp"
                app:fontFamily="@font/noto_sans"
                app:layout_constraintBottom_toBottomOf="@id/profileName"
                app:layout_constraintStart_toEndOf="@id/profileName"
                app:layout_constraintTop_toTopOf="@id/profileName" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_CaptionOrCommentOptions"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:minWidth="0dp"
            android:textColor="@color/bali_hai"
            app:icon="@drawable/frame_menu"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/cadet_blue"
            app:layout_constraintBottom_toBottomOf="@id/cl_userProfileWithoutDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cl_userProfileWithoutDetails" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/otherUserCaption"
            android:textColor="@color/oxford_blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_userProfileWithoutDetails" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_like"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minWidth="0dp"
            android:textColor="@color/bali_hai"
            app:icon="@drawable/heart_png"
            app:iconPadding="6dp"
            app:iconSize="16dp"
            app:iconTint="@color/cadet_blue"
            app:layout_constraintStart_toStartOf="@id/userCaption"
            app:layout_constraintTop_toBottomOf="@id/userCaption" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_comments"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:minWidth="0dp"
            android:textColor="@color/bali_hai"
            app:icon="@drawable/talke_off"
            app:iconPadding="6dp"
            app:iconSize="24dp"
            app:iconTint="@color/cadet_blue"
            app:layout_constraintStart_toEndOf="@id/btn_like"
            app:layout_constraintTop_toBottomOf="@id/userCaption" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>